--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
     <link rel="manifest" href="/manifest.json">
     <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="/src/wifi-app/wifi-app.html">
+    <link rel="shortcut icon" type="image/ico" href="favicon.png" />
 
     <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
     <style is="custom-style" include="iron-flex iron-positioning"></style>
