Initial login implementation

--- a/frontend/src/wifi-app/wifi-app.html
+++ b/frontend/src/wifi-app/wifi-app.html
@@ -4,17 +4,25 @@
 <link rel="import" href="../../bower_components/paper-card/paper-card.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/paper-spinner/paper-spinner.html">
+<link rel="import" href="../../bower_components/paper-dialog/paper-dialog.html">
 
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
 <link rel="import" href="../wifi-data/wifi-data.html">
+<link rel="import" href="../unimelb-auth/unimelb-auth.html">
 
 <dom-module id="wifi-app">
 
   <style is="custom-style" include="iron-flex"></style>
 
   <template>
-    <wifi-data username="[[studentUsername]]" data="{{data}}" loading="{{loading}}"></wifi-data>
+    <unimelb-auth
+      username="[[staffUsername]]"
+      password="[[staffPassword]]"
+      authenticated="{{authenticated}}"
+      access-token="{{accessToken}}"
+      loading="{{authLoading}}"></unimelb-auth>
+    <wifi-data username="[[studentUsername]]" data="{{data}}" loading="{{loading}}" access-token="[[accessToken]]"></wifi-data>
 
     <style>
       :host {
@@ -98,7 +106,35 @@
         width: 100px;
         height: 100px;
       }
+
+      #modal {
+        width: 400px;
+        height: 250px;
+      }
+      
+      #login-loading {
+        height: 100%;
+
+        margin-bottom: 20px;
+
+        @apply(--layout-center);
+        @apply(--layout-center-justified);
+      }
     </style>
+
+    <paper-dialog id="modal" class="vertical layout" modal>
+      <div id="login-loading" class="horizontal layout" hidden$="[[!authLoading]]">
+        <paper-spinner active></paper-spinner>
+      </div>
+      <div id="login-form" class="flex" hidden$="[[authLoading]]">
+        <h2>Login</h2>
+        <paper-input label="Staff username" value="{{inputUsername}}"></paper-input>
+        <paper-input label="Staff password" type="password" value="{{inputPassword}}"></paper-input>
+        <h3>[[loginError]]</h3>
+
+        <paper-button on-tap="doLogin" raised>Login</paper-button>
+      </div>
+    </paper-dialog>
 
 
     <div id="container" class="vertical layout">
@@ -160,10 +196,50 @@
           value: null,
           observer: '_dataChanged'
         },
+        authLoading: {
+          type: Boolean
+        },
         loading: {
           type: Boolean,
           value: false
+        },
+        staffUsername: {
+          type: String
+        },
+        staffPassword: {
+          type: String
+        },
+        authenticated: {
+          type: Boolean
+        },
+        accessToken: {
+          type: String,
+          observer: '_accessTokenChanged'
+        },
+        inputUsername: {
+          type: String
+        },
+        inputPassword: {
+          type: String
         }
+      },
+      _accessTokenChanged: function(access_token) {
+        console.log('access token: ' + access_token);
+        if (access_token == null || access_token.length == 0)
+          this.$$("#modal").open();
+        else 
+          this.$$("#modal").close();
+      },
+      doLogin: function(a, b) {
+        this.staffUsername = "";
+        this.staffPassword = "";
+
+        this.staffUsername = this.inputUsername;
+        this.staffPassword = this.inputPassword;
+
+        
+        console.log(a);
+        console.log(b);
       },
       _usernameChanged: function(username) {
         if(username.length > 0) {
