--- a/frontend/src/wifi-app/wifi-app.html
+++ b/frontend/src/wifi-app/wifi-app.html
@@ -197,7 +197,8 @@
           observer: '_dataChanged'
         },
         authLoading: {
-          type: Boolean
+          type: Boolean,
+          value: false
         },
         loading: {
           type: Boolean,
